--- a/Numpy/dataSimulation.ipynb
+++ b/Numpy/dataSimulation.ipynb
@@ -287,6 +287,189 @@
     "print(\"Min values :\", min)\n",
     "print(\"Max values :\", max)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2c708f4",
+   "metadata": {},
+   "source": [
+    "## Data Manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "9b7ec1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 10 normalized heights:\n",
+      " [0.2505092  0.3299388  0.44602832 0.317719   0.3686355  0.4704685\n",
+      " 0.35845223 0.4399186  0.6334013  0.38289207]\n",
+      "--------------------------------------------------\n",
+      "First 10 normalized weights:\n",
+      " [0.30196083 0.41372547 0.48627457 0.4568628  0.49803925 0.41960788\n",
+      " 0.50196075 0.46666673 0.6745098  0.40392154]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Min-Max Normalization\n",
+    "\n",
+    "def minmax_scale(arr):\n",
+    "    return (arr - arr.min()) / (arr.max() - arr.min())\n",
+    "\n",
+    "heights_norm = minmax_scale(heights)\n",
+    "weights_norm = minmax_scale(weights)\n",
+    "\n",
+    "print(\"First 10 normalized heights:\\n\", heights_norm[:10])\n",
+    "print('-' * 50)\n",
+    "print(\"First 10 normalized weights:\\n\", weights_norm[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ae43e91e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 10 BMI Values:\n",
+      " [22.929781 23.929821 23.621296 24.905775 24.913641 22.160212 25.13371\n",
+      " 23.364357 24.209373 23.02284 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute BMI (Body Mass Index)\n",
+    "\n",
+    "bmi = weights / ((heights / 100.0)**2)\n",
+    "print(\"First 10 BMI Values:\\n\", bmi[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6788f361",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 10 BMI Categories : \n",
+      " ['Normal' 'Normal' 'Normal' 'Normal' 'Normal' 'Normal' 'Overweight'\n",
+      " 'Normal' 'Normal' 'Normal' 'Normal' 'Overweight' 'Normal' 'Normal'\n",
+      " 'Normal' 'Normal' 'Overweight' 'Normal' 'Normal' 'Normal' 'Normal'\n",
+      " 'Overweight' 'Normal' 'Overweight' 'Normal' 'Normal' 'Normal'\n",
+      " 'Overweight' 'Normal' 'Normal' 'Normal' 'Normal' 'Normal' 'Normal'\n",
+      " 'Overweight' 'Normal' 'Normal' 'Normal' 'Normal' 'Normal' 'Overweight'\n",
+      " 'Overweight' 'Normal' 'Normal' 'Overweight' 'Overweight' 'Overweight'\n",
+      " 'Normal' 'Normal' 'Normal']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Categorize BMI into groups\n",
+    "\n",
+    "bmi_category = np.empty(bmi.shape, dtype=object)\n",
+    "\n",
+    "bmi_category = np.where(bmi<18.5, \"Underweight\", bmi_category)\n",
+    "bmi_category = np.where((bmi>=18.5) & (bmi<25), \"Normal\", bmi_category)\n",
+    "bmi_category = np.where((bmi>=25) & (bmi<30), \"Overweight\", bmi_category)\n",
+    "bmi_category = np.where(bmi>=30, \"Obese\", bmi_category)\n",
+    "\n",
+    "print(\"First 10 BMI Categories : \\n\", bmi_category[:50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f521eb9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMI Group Distribution:\n",
+      " {'Normal': np.int64(8213), 'Overweight': np.int64(1787)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count how many people in each BMI group\n",
+    "\n",
+    "from enum import unique\n",
+    "\n",
+    "\n",
+    "unique, counts = np.unique(bmi_category, return_counts=True)\n",
+    "bmi_distribution = dict(zip(unique, counts))\n",
+    "print(\"BMI Group Distribution:\\n\", bmi_distribution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9149f3cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(24, 162.3, 60.4, 31263.85, 22.929781, 'Normal')\n",
+      " (74, 166.2, 66.1, 50749.03, 23.929821, 'Normal')\n",
+      " (65, 171.9, 69.8, 91443.  , 23.621296, 'Normal') ...\n",
+      " (43, 164.7, 68.2, 26994.41, 25.141848, 'Overweight')\n",
+      " (59, 166.6, 64.5, 40104.88, 23.238586, 'Normal')\n",
+      " (62, 175.1, 76.4, 30146.17, 24.918451, 'Normal')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Attach new columns to the dataset\n",
+    "\n",
+    "dtype2 = [('age', 'i4'), ('height_cm', 'f4'), ('weight_kg', 'f4'),\n",
+    "          ('income', 'f8'), ('bmi', 'f4'), ('bmi_category', 'U12')]\n",
+    "\n",
+    "data2 = np.empty(n, dtype=dtype2)\n",
+    "\n",
+    "data2['age'] = ages\n",
+    "data2['height_cm'] = heights\n",
+    "data2['weight_kg'] = weights\n",
+    "data2['income'] = incomes\n",
+    "data2['bmi'] = bmi\n",
+    "data2['bmi_category'] = bmi_category\n",
+    "\n",
+    "print(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "e9966f9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows_extended = np.column_stack((ages, heights, weights, incomes, bmi))\n",
+    "rows_with_cat = np.column_stack((ages, heights, weights, incomes, bmi, bmi_category))\n",
+    "\n",
+    "np.savetxt(\n",
+    "    \"dataSimulation_extended.csv\",\n",
+    "    rows_with_cat,\n",
+    "    delimiter=\",\",\n",
+    "    fmt=[\"%d\", \"%.1f\", \"%.1f\", \"%.2f\", \"%.2f\", \"%s\"],\n",
+    "    header=\"age,height_cm,weight_kg,income,bmi,bmi_category\",\n",
+    "    comments=\"\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
