Select Columns Single and Multiples

--- a/Pandas/practicePandas.ipynb
+++ b/Pandas/practicePandas.ipynb
@@ -867,6 +867,79 @@
     "for col in df.columns:\n",
     "    print(f\"{col}: {df[col].nunique()} unique values\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cc48538",
+   "metadata": {},
+   "source": [
+    "### Data Selection & Filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "46cd49c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Single Column (Name):\n",
+      "\n",
+      "0         George Washington\n",
+      "1                John Adams\n",
+      "2          Thomas Jefferson\n",
+      "3             James Madison\n",
+      "4              James Monroe\n",
+      "5         John Quincy Adams\n",
+      "6            Andrew Jackson\n",
+      "7          Martin Van Buren\n",
+      "8    William Henry Harrison\n",
+      "9                John Tyler\n",
+      "Name: president, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select Single Column\n",
+    "print(\"Single Column (Name):\\n\")\n",
+    "print(df['president'].head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "804e37ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiple Columns (Name, Party):\n",
+      "\n",
+      "                president                                        party\n",
+      "0       George Washington                           Nonpartisan   [13]\n",
+      "1              John Adams                                   Federalist\n",
+      "2        Thomas Jefferson                      Democratic-  Republican\n",
+      "3           James Madison                      Democratic-  Republican\n",
+      "4            James Monroe                      Democratic-  Republican\n",
+      "5       John Quincy Adams                      Democratic-  Republican\n",
+      "6          Andrew Jackson                                   Democratic\n",
+      "7        Martin Van Buren                                   Democratic\n",
+      "8  William Henry Harrison                                         Whig\n",
+      "9              John Tyler  Whig   April 4, 1841  –  September 13, 1841\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select Multiple Columns\n",
+    "\n",
+    "print(\"Multiple Columns (Name, Party):\\n\")\n",
+    "print(df[['president', 'party']].head(10))"
+   ]
   }
  ],
  "metadata": {
