--- a/Pandas/practicePandas.ipynb
+++ b/Pandas/practicePandas.ipynb
@@ -940,6 +940,220 @@
     "print(\"Multiple Columns (Name, Party):\\n\")\n",
     "print(df[['president', 'party']].head(10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ef311102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 10 Rows:\n",
+      "\n",
+      "   S.No.           start            end               president  \\\n",
+      "0      1  April 30, 1789  March 4, 1797       George Washington   \n",
+      "1      2   March 4, 1797  March 4, 1801              John Adams   \n",
+      "2      3   March 4, 1801  March 4, 1809        Thomas Jefferson   \n",
+      "3      4   March 4, 1809  March 4, 1817           James Madison   \n",
+      "4      5   March 4, 1817  March 4, 1825            James Monroe   \n",
+      "5      6   March 4, 1825  March 4, 1829       John Quincy Adams   \n",
+      "6      7   March 4, 1829  March 4, 1837          Andrew Jackson   \n",
+      "7      8   March 4, 1837  March 4, 1841        Martin Van Buren   \n",
+      "8      9   March 4, 1841  April 4, 1841  William Henry Harrison   \n",
+      "9     10   April 4, 1841  March 4, 1845              John Tyler   \n",
+      "\n",
+      "                                               prior  \\\n",
+      "0  Commander-in-Chief  of the  Continental Army  ...   \n",
+      "1           1st  Vice President of the United States   \n",
+      "2           2nd  Vice President of the United States   \n",
+      "3  5th  United States Secretary of State   (1801–...   \n",
+      "4  7th  United States Secretary of State   (1811–...   \n",
+      "5  8th  United States Secretary of State   (1817–...   \n",
+      "6  U.S. Senator   ( Class 2 )   from  Tennessee  ...   \n",
+      "7           8th  Vice President of the United States   \n",
+      "8   United States Minister to Colombia   (1828–1829)   \n",
+      "9          10th  Vice President of the United States   \n",
+      "\n",
+      "                                         party                    vice  \n",
+      "0                           Nonpartisan   [13]              John Adams  \n",
+      "1                                   Federalist        Thomas Jefferson  \n",
+      "2                      Democratic-  Republican              Aaron Burr  \n",
+      "3                      Democratic-  Republican          George Clinton  \n",
+      "4                      Democratic-  Republican      Daniel D. Tompkins  \n",
+      "5                      Democratic-  Republican         John C. Calhoun  \n",
+      "6                                   Democratic         John C. Calhoun  \n",
+      "7                                   Democratic  Richard Mentor Johnson  \n",
+      "8                                         Whig              John Tyler  \n",
+      "9  Whig   April 4, 1841  –  September 13, 1841           Office vacant  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select row by index\n",
+    "\n",
+    "print(\"First 10 Rows:\\n\")\n",
+    "print(df.iloc[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "74f1eb34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row with index 0 and specific columns (Name, Party):\n",
+      "\n",
+      "president     George Washington\n",
+      "party        Nonpartisan   [13]\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select specific row and column\n",
+    "\n",
+    "print(\"Row with index 0 and specific columns (Name, Party):\\n\")\n",
+    "print(df.loc[0,['president', 'party']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "57094f8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Presidents from the Republican Party:\n",
+      "\n",
+      "               president\n",
+      "17      Ulysses S. Grant\n",
+      "18   Rutherford B. Hayes\n",
+      "19     James A. Garfield\n",
+      "20     Chester A. Arthur\n",
+      "22     Benjamin Harrison\n",
+      "24      William McKinley\n",
+      "25    Theodore Roosevelt\n",
+      "26   William Howard Taft\n",
+      "28     Warren G. Harding\n",
+      "29       Calvin Coolidge\n",
+      "30        Herbert Hoover\n",
+      "33  Dwight D. Eisenhower\n",
+      "36         Richard Nixon\n",
+      "37           Gerald Ford\n",
+      "39         Ronald Reagan\n",
+      "40     George H. W. Bush\n",
+      "42        George W. Bush\n",
+      "44          Donald Trump\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditional filtering\n",
+    "\n",
+    "print(\"Presidents from the Republican Party:\\n\")\n",
+    "print(df[df['party'] == 'Republican'][['president']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9a7d3b94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presidents from the Republican Party before 1850:\n",
+      "\n",
+      "               president\n",
+      "25    Theodore Roosevelt\n",
+      "26   William Howard Taft\n",
+      "28     Warren G. Harding\n",
+      "29       Calvin Coolidge\n",
+      "30        Herbert Hoover\n",
+      "33  Dwight D. Eisenhower\n",
+      "36         Richard Nixon\n",
+      "37           Gerald Ford\n",
+      "39         Ronald Reagan\n",
+      "40     George H. W. Bush\n",
+      "42        George W. Bush\n",
+      "44          Donald Trump\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiple conditions\n",
+    "\n",
+    "print(\"presidents from the Republican Party before 1850:\\n\")\n",
+    "print(df[(df['party'] == 'Republican') & (df['start'] <= 'July 9, 1850')][['president']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b4ae382b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "presidents from the Republican or Democratic Party:\n",
+      "\n",
+      "                president\n",
+      "6          Andrew Jackson\n",
+      "7        Martin Van Buren\n",
+      "10          James K. Polk\n",
+      "13        Franklin Pierce\n",
+      "14         James Buchanan\n",
+      "17       Ulysses S. Grant\n",
+      "18    Rutherford B. Hayes\n",
+      "19      James A. Garfield\n",
+      "20      Chester A. Arthur\n",
+      "21       Grover Cleveland\n",
+      "22      Benjamin Harrison\n",
+      "23       Grover Cleveland\n",
+      "24       William McKinley\n",
+      "25     Theodore Roosevelt\n",
+      "26    William Howard Taft\n",
+      "27         Woodrow Wilson\n",
+      "28      Warren G. Harding\n",
+      "29        Calvin Coolidge\n",
+      "30         Herbert Hoover\n",
+      "31  Franklin D. Roosevelt\n",
+      "32        Harry S. Truman\n",
+      "33   Dwight D. Eisenhower\n",
+      "34        John F. Kennedy\n",
+      "35      Lyndon B. Johnson\n",
+      "36          Richard Nixon\n",
+      "37            Gerald Ford\n",
+      "38           Jimmy Carter\n",
+      "39          Ronald Reagan\n",
+      "40      George H. W. Bush\n",
+      "41           Bill Clinton\n",
+      "42         George W. Bush\n",
+      "43           Barack Obama\n",
+      "44           Donald Trump\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OR condition\n",
+    "\n",
+    "print(\"presidents from the Republican or Democratic Party:\\n\")\n",
+    "print(df[(df['party'] == 'Republican') | (df['party'] == 'Democratic')] [['president']])"
+   ]
   }
  ],
  "metadata": {
